# CT2Hair

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md
CT2Hair/: environment.yml  interp.py  optim.py
CT2Hair/GuideHairStrands/: CMakeLists.txt  clock.h  cuda_types.h  density_volume.cpp  density_volume.h  hair.cpp  hair.h  hair_vdb.cpp  hair_vdb.h  kernel.cu  main.cpp  voxel_grid.cpp  voxel_grid.h
CT2Hair/datautils/: dataloaders.py  datautils.py
CT2Hair/libs/chamfer_distance/: chamfer_distance.cpp  chamfer_distance.cu  chamfer_distance.py
CT2Hair/modules/: networks.py  neural_strands.py  strands_codec.py  strands_opt.py
CT2Hair/utils/: kernels.py  meshutils.py  pcutils.py  strandsutils.py  utils.py
conf/data/: Bangs.conf  Blowout.conf  Bob.conf  Curly.conf  Jewfro.conf  Jheri.conf  MopTop.conf  Pixie.conf  Wavy.conf  Wings.conf
scripts/: est_orientations.py  gen_guide_strands.py  interpolation.py  optimization.py
